NMdoc/force-app/main/default/objects/Venue__c/fields/Availability_Status__c.field-meta.xml
<CustomField>
    <fullName>Availability_Status__c</fullName>
    <label>Availability Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Available</fullName>
                <default>true</default>
                <label>Available</label>
            </value>
            <value>
                <fullName>Booked</fullName>
            </value>
            <value>
                <fullName>Under Maintenance</fullName>
            </value>
            <value>
                <fullName>Not Available</fullName>
                <isActive>false</isActive>
                <label>Not Available</label>
            </value>
            <value>
                <fullName>Reserved</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>