NMdoc/force-app/main/default/objects/Venue__c/fields/Rental_Cost__c.field-meta.xml
<CustomField>
    <fullName>Rental_Cost__c</fullName>
    <label>Rental Cost</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>